--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <section class="section">
       <h2 class="trust">
         WE WILL NEVER USE OUR CLIENT BASE FOR OUR MARKETING. <br />
-        TRUST ASSURED
+        TRUST ASSURED .
       </h2>
     </section>
     <section class="section darkSection formSection">
