--- a/index.html
+++ b/index.html
@@ -1,1 +1,233 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="Title"
+      content="Leader's Brand for Social Media Management, Online campaign strategy"
+    />
+    <meta
+      name="description"
+      content="We create & manage your Social Media presence to increase your popularity in your constituency. 
+"
+    />
+    <meta
+      name="keywords"
+      content="Indian election campaign, online election campaign, India Online election, Social media management, social media for elections, Online marketing for elections, Online marketing for elections campaign, Digital campaign, Digital election campaigns, Digital politics, Digital political campaigns,"
+    />
+    <meta name="robots" content="INDEX,FOLLOW" />
+    <link rel="canonical" href="https://thepolitics.life" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <!-- Linking FontAwesome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- Linking Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+    <!-- src for ajax call to send visitors contact form data to ThePolitics.Life -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <!-- Place favicon.ico in the image folder -->
+    <!-- favicon-->
+    <link rel="shortcut icon" type="image/png" href="images/favicon2.png" />
+    <!-- Linking CSS files -->
+    <link rel="stylesheet" href="css/thepoliticslife.css" />
+    <link rel="stylesheet" href="./css/mediaframes.css" />
+    <title>The Politics Life</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navBar">
+        <img
+          class="navBar-logoImage"
+          src="./images/logo.png"
+          alt="Logo Image"
+        />
+      </nav>
+    </header>
+    <section class="section darkSection intro">
+      <h1 class="intro-h1">WE CREATE YOUR POLITICAL BRAND ON SOCIAL MEDIA</h1>
+    </section>
+    <section class="section introTxt">
+      <p class="txt">
+        From a C.E.O of a company living in city to a daily wage worker in a
+        remote village access internet on their mobiles these days, Youth and
+        students are a add on bonus.
+      </p>
+      <p class="txt">
+        The investment is high in physical marketing like
+        <b>Print Media, Flex Banners, Posters, Pamphlets etc.</b> and their
+        reach is limited to the locality they are put in.
+        <b>But Social media in Election Campaigns is a game changer</b>,
+        increases your Political Brand Value among voters, increases
+        reachability, it even earns more trust about the Candidate.
+      </p>
+    </section>
+    <section class="section darkSection languages">
+      <h2>We can talk in ..</h2>
+      <div class="language-container">
+        <div class="language-container-text">
+          <ul>
+            <li>ಕನ್ನಡ</li>
+            <li>తెలుగు</li>
+            <li>हिंदी</li>
+            <li>English</li>
+            <li>தமிழ்</li>
+            <li>മലയാളം</li>
+            <li>मराठी</li>
+            <li>বাংলা</li>
+            <li>ગુજરાતી</li>
+          </ul>
+        </div>
+        <img class="language-container-bgImg" src="./images/H.png" alt="" />
+      </div>
+    </section>
+    <section class="section WE">
+      <p class="txt" style="line-height: 5rem">
+        <span class="spanWE">WE</span>
+        <b> From the team of MIT, Manipal alumnus.</b>
+        We conduct vigorous surveys in the constituencies, understand the
+        sentiments of the public and execute the Social Media Action Plan, that
+        hits the right spot and increasing your chances towards majority vote
+        share.
+      </p>
+    </section>
+    <section class="section darkSection socialMediaServices">
+      <h2>SOCIAL MEDIA SERVICES ELECTION CAMPAIGNS:</h2>
+      <ul>
+        <li><i class="fa fa fa-plus"></i>PERSONALISED WEBSITE</li>
+        <li><i class="fa fa fa-plus"></i>FACEBOOK CAMPAIGNS</li>
+        <li><i class="fa fa fa-plus"></i>INSTAGRAM CAMPAIGNS</li>
+        <li><i class="fa fa fa-plus"></i>YOUTUBE CAMPAIGNS</li>
+        <li>
+          <i class="fa fa fa-plus"></i>DRAFTING SOCIAL MEDIA STRATEGY & CONTENT
+        </li>
+        <li><i class="fa fa fa-plus"></i>ONLINE REPUTATION MANAGEMENT</li>
+        <li>
+          <i class="fa fa fa-plus"></i>MANIFESTO AWARENESS CAMPAIGNS ON SOCIAL
+          MEDIA
+        </li>
+        <li>
+          <i class="fa fa fa-plus"></i>MICRO & MACRO TRAGETING CAMPAIGNS ON
+          FACEBOOK & INSTAGRAM
+        </li>
+        <li>
+          <i class="fa fa fa-plus"></i>STREAMING VIDEO ADS, LIVE INTERACTIONS ON
+          FACEBOOK & INSTAGRAM
+        </li>
+      </ul>
+    </section>
+    <section class="section">
+      <h2 class="trust">
+        WE WILL NEVER USE OUR CLIENT BASE FOR OUR MARKETING. <br />
+        TRUST ASSURED
+      </h2>
+    </section>
+    <section class="section darkSection formSection">
+      <h3 style="font-weight: 100">
+        CONTACT US FOR SOCIAL MEDIA MANAGEMENT AND ELECTION CAMPAIGNS ON SOCIAL
+        MEDIA:
+      </h3>
+      <form id="survey-form">
+        <label id="name-label" for="name">Name</label>
+        <input
+          type="text"
+          name="name"
+          id="name"
+          class="form-control"
+          placeholder=""
+          required
+        />
+        <label id="number-label" for="number">Number</label>
+        <input
+          type="number"
+          name="number"
+          id="number"
+          class="form-control"
+          placeholder=""
+          required
+        />
+        <label for="comments"
+          >Enter your Querry <br />
+          <span style="font-size: 70%">( if any )</span></label
+        >
+        <textarea
+          id="comments"
+          class="form-control input-textarea"
+          name="comments"
+          placeholder=""
+          required
+        ></textarea>
+        <div></div>
+        <div onclick="SubForm()" id="submitBtn" class="submitBtn">Submit</div>
+      </form>
+    </section>
+    <section class="section contactUs">
+      <h2>OR REACH US AT :</h2>
+      <div class="contactUs-grid">
+        <div class="contactUs-grid-Box">
+          <p>
+            TO CALL US DIRECTLY
+            <br />
+            <span class="contactUs-grid-Box-highlight"
+              >DIAL +91 9019751239</span
+            >
+          </p>
+          <a href="tel:9019751239"
+            >CLICK HERE TO DIAL <i class="fa fa-phone"></i>
+          </a>
+        </div>
+        <div class="contactUs-grid-Box">
+          <p>
+            TO CHAT WITH US ON
+            <span class="contactUs-grid-Box-highlight">WHATSAPP</span>
+          </p>
+          <a
+            href="https://api.whatsapp.com/send?phone=919019751239"
+            target="_blank"
+            >CLICK HERE TO CHAT <i class="fa fa-whatsapp"></i>
+          </a>
+        </div>
+        <div class="contactUs-grid-Box">
+          <p>MAIL US ON</p>
+          <span class="contactUs-grid-Box-highlight"
+            ><i class="fa fa-envelope"> </i> thepoliticslife@gmail.com</span
+          >
+        </div>
+      </div>
+    </section>
+    <section class="section darkSection poweredBy">
+      <p>Powered By</p>
+      <h3>ThePolitics.life</h3>
+      <br />
+      <br />
+      <span class="copyright">
+        <i class="fa fa-copyright"></i> Copyright 2023
+        <i> ThePolitics.Life All Rights Reserved </i><br />
+      </span>
+    </section>
+
+    <div id="submitConfirmation">
+      <div class="container">
+        <div id="submitConfirmationBox">
+          <h2>THANKYOU FOR CHOOSING US.</h2>
+          <br />
+          <h3>OUR TEAM WILL CONTACT YOU SHORTLY. !!!</h3>
+          <p id="close" onclick="closeSubmitConfirmationBox()">X</p>
+        </div>
+      </div>
+    </div>
+
+    <script src="thepoliticslife.js"></script>
+  </body>
+</html>
